<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chap1_startPage">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="479dp"
        android:layout_height="834dp"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dynasty_4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:background="@color/title_bg"
        android:fontFamily="@font/jura_light"
        android:gravity="center"
        android:text="@string/chap_num"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:background="@color/title_bg"
        android:gravity="center"
        android:text="@string/chap_title"
        android:textColor="@color/ash"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:background="@color/title_bg"
        android:text="@string/objective"
        android:textColor="@color/objective"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.186" />
</androidx.constraintlayout.widget.ConstraintLayout>