<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    tools:context=".chap1_plot_sp_4_plt4dec43">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="461dp"
        android:layout_height="884dp"
        android:src="@drawable/sects"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="8dp"
                android:background="@color/title_bg"
                android:fontFamily="@font/jura_light"
                android:text="@string/hiddenBamboo"
                android:textAlignment="center"
                android:textColor="@color/ash"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:background="@color/title_bg"
                android:fontFamily="@font/jura_light"
                android:text="@string/waterMist"
                android:textAlignment="center"
                android:textColor="@color/ash"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/jura_light"
                android:text="@string/decisions"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dec_sp_4_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:text="@string/decision_4.1_dec_3.1" />

            <Button
                android:id="@+id/dec_sp_4_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:text="@string/decision_4.2_dec_3.1" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>