<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    tools:context=".chap1_plot3_plt2">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="461dp"
        android:layout_height="884dp"
        android:src="@drawable/mandescends"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="8dp"
                android:background="@color/title_bg"
                android:fontFamily="@font/jura_light"
                android:gravity="center"
                android:text="@string/plot_3_dec_2_part2"
                android:textColor="@color/ash"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:background="@color/title_bg"
                android:fontFamily="@font/jura_light"
                android:gravity="center"
                android:text="@string/plot_3_dec_2_part3"
                android:textColor="@color/ash"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/jura_light"
                android:text="@string/decisions"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dec_3_1_21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:text="@string/decision_3.1_dec_1.1_1.2" />

            <Button
                android:id="@+id/dec_3_2_21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:text="@string/decision_3.2_dec_1.1_1.2" />

            <Button
                android:id="@+id/dec_3_3_21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:text="@string/decision_3.3_dec_1.1_1.2" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>