<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    tools:context=".chap1_result">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/title_bg"
            android:fontFamily="@font/jura_light"
            android:gravity="center"
            android:text="@string/bridge_3"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@color/plot_bg"
                android:fontFamily="@font/jura_light"
                android:text="@string/attitude"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/attd"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1.5"
                android:background="@color/title_bg"
                android:fontFamily="@font/jura_light"
                android:textAlignment="center"
                android:textColor="@color/ash"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@color/title_bg"
                android:fontFamily="@font/jura_light"
                android:text="@string/intellect"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/intlct"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1.5"
                android:background="@color/plot_bg"
                android:fontFamily="@font/jura_light"
                android:textAlignment="center"
                android:textColor="@color/ash"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView42"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@color/plot_bg"
                android:fontFamily="@font/jura_light"
                android:text="@string/adventurous"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/advn"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1.5"
                android:background="@color/title_bg"
                android:fontFamily="@font/jura_light"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/ash"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/objective"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@color/title_bg"
                android:fontFamily="@font/jura_light"
                android:textAlignment="center"
                android:textColor="@color/ash"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@color/plot_bg"
                android:fontFamily="@font/jura_light"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/ash"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="62dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backToStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="Back to Start" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>